--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,174 +1,240 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=main
-_pytorch_select=0.1=cpu_0
-appdirs=1.4.4=pypi_0
-argon2-cffi=20.1.0=py37h8f50634_2
-async_generator=1.10=py_0
-attrs=20.2.0=pyh9f0ad1d_0
-audioread=2.1.9=pypi_0
-backports=1.0=py_2
-backports.functools_lru_cache=1.6.1=py_0
-blas=1.0=mkl
-bleach=3.2.1=pyh9f0ad1d_0
-boto3=1.16.9=pypi_0
-botocore=1.19.9=pypi_0
-ca-certificates=2020.10.14=0
-certifi=2020.6.20=pyhd3eb1b0_3
-cffi=1.14.3=py37he30daa8_0
-chardet=3.0.4=pypi_0
-click=7.1.2=pypi_0
-configparser=5.0.1=pypi_0
-cudatoolkit=11.0.221=h6bb024c_0
-cycler=0.10.0=pypi_0
-datasets=1.1.2=pypi_0
-decorator=4.4.2=py_0
-defusedxml=0.6.0=py_0
-dill=0.3.2=pypi_0
-docker-pycreds=0.4.0=pypi_0
-entrypoints=0.3=py37hc8dfbb8_1002
-fastscript=1.0.0=pypi_0
-filelock=3.0.12=pypi_0
-freetype=2.10.4=h5ab3b9f_0
-future=0.18.2=pypi_0
-gitdb=4.0.5=pypi_0
-gitpython=3.1.11=pypi_0
-gql=0.2.0=pypi_0
-graphql-core=1.1=pypi_0
-idna=2.10=pypi_0
-importlib-metadata=2.0.0=py_1
-importlib_metadata=2.0.0=1
-inflect=4.1.0=py37_1
-intel-openmp=2019.4=243
-ipykernel=5.3.4=py37hc6149b9_1
-ipython=5.8.0=py37_1
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.5.1=pyh9f0ad1d_1
-jinja2=2.11.2=pyh9f0ad1d_0
-jmespath=0.10.0=pypi_0
-joblib=0.17.0=pypi_0
-jpeg=9b=h024ee3a_2
-json5=0.9.5=pypi_0
-jsonschema=3.2.0=py_2
-jupyter_client=6.1.7=py_0
-jupyter_core=4.6.3=py37hc8dfbb8_2
-jupyterlab=2.0.1=pypi_0
-jupyterlab-server=1.0.9=pypi_0
-jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
-kiwisolver=1.2.0=pypi_0
-lcms2=2.11=h396b838_0
-ld_impl_linux-64=2.33.1=h53a641e_7
-libedit=3.1.20191231=h14c3975_1
-libffi=3.3=he6710b0_2
-libgcc-ng=9.1.0=hdf63c60_0
-libpng=1.6.37=hbc83047_0
-librosa=0.8.0=pypi_0
-libsodium=1.0.18=h516909a_1
-libstdcxx-ng=9.1.0=hdf63c60_0
-libtiff=4.1.0=h2733197_1
-libuv=1.40.0=h7b6447c_0
-llvmlite=0.34.0=pypi_0
-lz4-c=1.9.2=heb0550a_3
-markupsafe=1.1.1=py37hb5d75c8_2
-matplotlib=3.2.1=pypi_0
-mistune=0.8.4=py37h8f50634_1002
-mkl=2019.4=243
-mkl-service=2.3.0=py37he904b0f_0
-mkl_fft=1.2.0=py37h23d657b_0
-mkl_random=1.0.4=py37hd81dba3_0
-multiprocess=0.70.10=pypi_0
-nbclient=0.5.1=py_0
-nbconvert=6.0.7=py37hc8dfbb8_2
-nbdev=0.2.16=pypi_0
-nbformat=5.0.8=py_0
-ncurses=6.2=he6710b0_1
-nest-asyncio=1.4.1=py_0
-ninja=1.10.1=py37hfd86e86_0
-notebook=6.1.4=py37hc8dfbb8_1
-numba=0.51.2=pypi_0
-numpy=1.18.2=pypi_0
-nvidia-ml-py3=7.352.0=pypi_0
-olefile=0.46=py37_0
-openssl=1.1.1h=h7b6447c_0
-packaging=20.4=pyh9f0ad1d_0
-pandas=1.0.3=pypi_0
-pandoc=2.11.0.4=hd18ef5c_0
-pandocfilters=1.4.2=py_1
-pathtools=0.1.2=pypi_0
-pexpect=4.8.0=pyh9f0ad1d_2
-pickleshare=0.7.5=py_1003
-pillow=8.0.1=py37he98fc37_0
-pip=20.2.4=py37_0
-pooch=1.2.0=pypi_0
-portaudio=19.6.0=h7b6447c_4
-prometheus_client=0.8.0=pyh9f0ad1d_0
-promise=2.3=pypi_0
-prompt_toolkit=1.0.15=py_1
-protobuf=3.13.0=pypi_0
-psutil=5.7.3=pypi_0
-ptyprocess=0.6.0=py_1001
-pyarrow=2.0.0=pypi_0
-pyaudio=0.2.11=py37h7b6447c_2
-pycparser=2.20=py_2
-pygments=2.7.2=py_0
-pyparsing=2.4.7=pyh9f0ad1d_0
-pyrsistent=0.17.3=py37h8f50634_1
-python=3.7.9=h7579374_0
-python-dateutil=2.8.1=py_0
-python_abi=3.7=1_cp37m
-pytorch=1.7.0=py3.7_cuda11.0.221_cudnn8.0.3_0
-pyttsx3=2.90=pypi_0
-pytz=2020.1=py_0
-pyyaml=5.3.1=pypi_0
-pyzmq=19.0.2=py37hac76be4_2
-readline=8.0=h7b6447c_0
-regex=2020.10.28=pypi_0
-requests=2.24.0=pypi_0
-resampy=0.2.2=pypi_0
-s3transfer=0.3.3=pypi_0
-sacremoses=0.0.43=pypi_0
-scikit-learn=0.23.2=pypi_0
-scipy=1.5.3=pypi_0
-send2trash=1.5.0=py_0
-sentencepiece=0.1.94=pypi_0
-sentry-sdk=0.19.1=pypi_0
-seqeval=1.2.2=pypi_0
-setuptools=50.3.0=py37hb0f4dca_1
-shortuuid=1.0.1=pypi_0
-simplegeneric=0.8.1=py_1
-simpletransformers=0.21.4=pypi_0
-six=1.15.0=py_0
-smmap=3.0.4=pypi_0
-soundfile=0.10.3.post1=pypi_0
-speechrecognition=3.8.1=pypi_0
-sqlite=3.33.0=h62c20be_0
-subprocess32=3.5.4=pypi_0
-tensorboardx=2.1=pypi_0
-terminado=0.9.1=py37hc8dfbb8_1
-testpath=0.4.4=py_0
-threadpoolctl=2.1.0=pypi_0
-tk=8.6.10=hbc83047_0
-tokenizers=0.5.2=pypi_0
-torch=1.4.0=pypi_0
-torchaudio=0.7.0=py37
-torchvision=0.8.1=py37_cu110
-tornado=6.1=py37h4abf009_0
-tqdm=4.43.0=pypi_0
-traitlets=5.0.5=py_0
-transformers=2.6.0=pypi_0
-typing_extensions=3.7.4.3=py_0
-unidecode=1.1.1=py_0
-urllib3=1.25.11=pypi_0
-wandb=0.8.35=pypi_0
-watchdog=0.10.3=pypi_0
-wcwidth=0.2.5=pyh9f0ad1d_2
-webencodings=0.5.1=py_1
-wheel=0.35.1=py_0
-widgetsnbextension=3.5.1=py37hc8dfbb8_4
-xxhash=2.0.0=pypi_0
-xz=5.2.5=h7b6447c_0
-zeromq=4.3.3=he1b5a44_2
-zipp=3.4.0=py_0
-zlib=1.2.11=h7b6447c_3
-zstd=1.4.5=h9ceee32_0
+altair==4.1.0
+appdirs==1.4.4
+appnope==0.1.2
+argon2-cffi==20.1.0
+astor==0.8.1
+async-generator==1.10
+attrs==20.3.0
+audioread==2.1.9
+backcall==0.2.0
+base58==2.0.1
+bleach==3.2.1
+blinker==1.4
+cachetools==4.2.0
+certifi==2020.12.5
+cffi==1.14.4
+chardet==4.0.0
+click==7.1.2
+decorator==4.4.2
+deepspeech==0.9.3
+defusedxml==0.6.0
+entrypoints==0.3
+filelock==3.0.12
+Flask==1.1.2
+gitdb==4.0.5
+GitPython==3.1.11
+graphviz==0.16
+idna==2.10
+install==1.3.4
+ipykernel==5.4.2
+ipython==7.19.0
+ipython-genutils==0.2.0
+ipywidgets==7.6.2
+itsdangerous==1.1.0
+jedi==0.18.0
+Jinja2==2.11.2
+joblib==1.0.0
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-core==4.7.0
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.0
+librosa==0.8.0
+llvmlite==0.35.0
+MarkupSafe==1.1.1
+mistune==0.8.4
+nbclient==0.5.1
+nbconvert==6.0.7
+nbformat==5.0.8
+nest-asyncio==1.4.3
+notebook==6.1.6
+numba==0.52.0
+numpy==1.17.3
+packaging==20.8
+pandas==1.2.0
+pandocfilters==1.4.3
+parso==0.8.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.1.0
+pooch==1.3.0
+prometheus-client==0.9.0
+prompt-toolkit==3.0.8
+protobuf==3.14.0
+ptyprocess==0.7.0
+pyarrow==2.0.0
+PyAudio==0.2.11
+pycparser==2.20
+pydeck==0.5.0
+Pygments==2.7.3
+PyJWT==2.0.0
+pyobjc==7.1
+pyobjc-core==7.1
+pyobjc-framework-Accessibility==7.1
+pyobjc-framework-Accounts==7.1
+pyobjc-framework-AddressBook==7.1
+pyobjc-framework-AdServices==7.1
+pyobjc-framework-AdSupport==7.1
+pyobjc-framework-AppleScriptKit==7.1
+pyobjc-framework-AppleScriptObjC==7.1
+pyobjc-framework-ApplicationServices==7.1
+pyobjc-framework-AppTrackingTransparency==7.1
+pyobjc-framework-AuthenticationServices==7.1
+pyobjc-framework-AutomaticAssessmentConfiguration==7.1
+pyobjc-framework-Automator==7.1
+pyobjc-framework-AVFoundation==7.1
+pyobjc-framework-AVKit==7.1
+pyobjc-framework-BusinessChat==7.1
+pyobjc-framework-CalendarStore==7.1
+pyobjc-framework-CallKit==7.1
+pyobjc-framework-CFNetwork==7.1
+pyobjc-framework-ClassKit==7.1
+pyobjc-framework-CloudKit==7.1
+pyobjc-framework-Cocoa==7.1
+pyobjc-framework-Collaboration==7.1
+pyobjc-framework-ColorSync==7.1
+pyobjc-framework-Contacts==7.1
+pyobjc-framework-ContactsUI==7.1
+pyobjc-framework-CoreAudio==7.1
+pyobjc-framework-CoreAudioKit==7.1
+pyobjc-framework-CoreBluetooth==7.1
+pyobjc-framework-CoreData==7.1
+pyobjc-framework-CoreHaptics==7.1
+pyobjc-framework-CoreLocation==7.1
+pyobjc-framework-CoreMedia==7.1
+pyobjc-framework-CoreMediaIO==7.1
+pyobjc-framework-CoreMIDI==7.1
+pyobjc-framework-CoreML==7.1
+pyobjc-framework-CoreMotion==7.1
+pyobjc-framework-CoreServices==7.1
+pyobjc-framework-CoreSpotlight==7.1
+pyobjc-framework-CoreText==7.1
+pyobjc-framework-CoreWLAN==7.1
+pyobjc-framework-CryptoTokenKit==7.1
+pyobjc-framework-DeviceCheck==7.1
+pyobjc-framework-DictionaryServices==7.1
+pyobjc-framework-DiscRecording==7.1
+pyobjc-framework-DiscRecordingUI==7.1
+pyobjc-framework-DiskArbitration==7.1
+pyobjc-framework-DVDPlayback==7.1
+pyobjc-framework-EventKit==7.1
+pyobjc-framework-ExceptionHandling==7.1
+pyobjc-framework-ExecutionPolicy==7.1
+pyobjc-framework-ExternalAccessory==7.1
+pyobjc-framework-FileProvider==7.1
+pyobjc-framework-FileProviderUI==7.1
+pyobjc-framework-FinderSync==7.1
+pyobjc-framework-FSEvents==7.1
+pyobjc-framework-GameCenter==7.1
+pyobjc-framework-GameController==7.1
+pyobjc-framework-GameKit==7.1
+pyobjc-framework-GameplayKit==7.1
+pyobjc-framework-ImageCaptureCore==7.1
+pyobjc-framework-IMServicePlugIn==7.1
+pyobjc-framework-InputMethodKit==7.1
+pyobjc-framework-InstallerPlugins==7.1
+pyobjc-framework-InstantMessage==7.1
+pyobjc-framework-Intents==7.1
+pyobjc-framework-IOSurface==7.1
+pyobjc-framework-iTunesLibrary==7.1
+pyobjc-framework-KernelManagement==7.1
+pyobjc-framework-LatentSemanticMapping==7.1
+pyobjc-framework-LaunchServices==7.1
+pyobjc-framework-libdispatch==7.1
+pyobjc-framework-LinkPresentation==7.1
+pyobjc-framework-LocalAuthentication==7.1
+pyobjc-framework-MapKit==7.1
+pyobjc-framework-MediaAccessibility==7.1
+pyobjc-framework-MediaLibrary==7.1
+pyobjc-framework-MediaPlayer==7.1
+pyobjc-framework-MediaToolbox==7.1
+pyobjc-framework-Metal==7.1
+pyobjc-framework-MetalKit==7.1
+pyobjc-framework-MetalPerformanceShaders==7.1
+pyobjc-framework-MetalPerformanceShadersGraph==7.1
+pyobjc-framework-MLCompute==7.1
+pyobjc-framework-ModelIO==7.1
+pyobjc-framework-MultipeerConnectivity==7.1
+pyobjc-framework-NaturalLanguage==7.1
+pyobjc-framework-NetFS==7.1
+pyobjc-framework-Network==7.1
+pyobjc-framework-NetworkExtension==7.1
+pyobjc-framework-NotificationCenter==7.1
+pyobjc-framework-OpenDirectory==7.1
+pyobjc-framework-OSAKit==7.1
+pyobjc-framework-OSLog==7.1
+pyobjc-framework-PassKit==7.1
+pyobjc-framework-PencilKit==7.1
+pyobjc-framework-Photos==7.1
+pyobjc-framework-PhotosUI==7.1
+pyobjc-framework-PreferencePanes==7.1
+pyobjc-framework-PushKit==7.1
+pyobjc-framework-Quartz==7.1
+pyobjc-framework-QuickLookThumbnailing==7.1
+pyobjc-framework-ReplayKit==7.1
+pyobjc-framework-SafariServices==7.1
+pyobjc-framework-SceneKit==7.1
+pyobjc-framework-ScreenSaver==7.1
+pyobjc-framework-ScreenTime==7.1
+pyobjc-framework-ScriptingBridge==7.1
+pyobjc-framework-SearchKit==7.1
+pyobjc-framework-Security==7.1
+pyobjc-framework-SecurityFoundation==7.1
+pyobjc-framework-SecurityInterface==7.1
+pyobjc-framework-ServiceManagement==7.1
+pyobjc-framework-Social==7.1
+pyobjc-framework-SoundAnalysis==7.1
+pyobjc-framework-Speech==7.1
+pyobjc-framework-SpriteKit==7.1
+pyobjc-framework-StoreKit==7.1
+pyobjc-framework-SyncServices==7.1
+pyobjc-framework-SystemConfiguration==7.1
+pyobjc-framework-SystemExtensions==7.1
+pyobjc-framework-UniformTypeIdentifiers==7.1
+pyobjc-framework-UserNotifications==7.1
+pyobjc-framework-UserNotificationsUI==7.1
+pyobjc-framework-VideoSubscriberAccount==7.1
+pyobjc-framework-VideoToolbox==7.1
+pyobjc-framework-Virtualization==7.1
+pyobjc-framework-Vision==7.1
+pyobjc-framework-WebKit==7.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pyttsx3==2.90
+pytz==2020.5
+pyzmq==20.0.0
+regex==2020.11.13
+requests==2.25.1
+resampy==0.2.2
+sacremoses==0.0.43
+scikit-learn==0.24.0
+scipy==1.6.0
+Send2Trash==1.5.0
+six==1.15.0
+smmap==3.0.4
+SoundFile==0.10.3.post1
+SpeechRecognition==3.8.1
+streamlit==0.73.1
+terminado==0.9.1
+testpath==0.4.4
+threadpoolctl==2.1.0
+tokenizers==0.9.4
+toml==0.10.2
+toolz==0.11.1
+torch==1.7.1
+tornado==6.1
+tqdm==4.55.1
+traitlets==5.0.5
+transformers==4.1.1
+transitions==0.8.6
+twilio==6.50.1
+typing-extensions==3.7.4.3
+tzlocal==2.1
+urllib3==1.26.2
+validators==0.18.2
+watchdog==1.0.2
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
