--- a/environment.yml
+++ b/environment.yml
@@ -3,11 +3,13 @@ channels:
   - pytorch
   - huggingface
   - conda-forge
+  - anaconda
   - defaults
 dependencies:
+  - _anaconda_depends=2020.07=py38_0
   - _ipyw_jlab_nb_ext_conf=0.1.0=py38_0
   - alabaster=0.7.12=py_0
-  - anaconda=2020.11=py38_0
+  - anaconda=custom=py38_1
   - anaconda-client=1.7.2=py38_0
   - anaconda-navigator=1.10.0=py38_0
   - anaconda-project=0.8.4=py_0
@@ -42,9 +44,8 @@ dependencies:
   - brotlipy=0.7.0=py38haf1e3a3_1000
   - bzip2=1.0.8=h1de35cc_0
   - ca-certificates=2020.10.14=0
-  - certifi=2020.6.20=pyhd3eb1b0_3
+  - certifi=2020.6.20=py38_0
   - cffi=1.14.3=py38hed5b41f_0
-  - chardet=3.0.4=py38_1003
   - click=7.1.2=py_0
   - cloudpickle=1.6.0=py_0
   - clyent=1.2.2=py38_1
@@ -56,7 +57,7 @@ dependencies:
   - conda-verify=3.4.2=py_1
   - contextlib2=0.6.0.post1=py_0
   - cryptography=3.1.1=py38hddc9c9b_0
-  - curl=7.71.1=hb0a8c7a_1
+  - curl=7.69.1=ha441bb4_0
   - cycler=0.10.0=py38_0
   - cython=0.29.21=py38hb1e8313_0
   - cytoolz=0.11.0=py38haf1e3a3_0
@@ -123,11 +124,11 @@ dependencies:
   - jupyterlab_server=1.2.0=py_0
   - keyring=21.4.0=py38_1
   - kiwisolver=1.3.0=py38h23ab428_0
-  - krb5=1.18.2=h75d18d8_0
+  - krb5=1.17.1=hddcf347_0
   - lazy-object-proxy=1.4.3=py38h1de35cc_0
   - lcms2=2.11=h92f6f08_0
   - libarchive=3.4.2=haa3ed63_0
-  - libcurl=7.71.1=h8a08a2b_1
+  - libcurl=7.69.1=h051b688_0
   - libcxx=10.0.0=1
   - libedit=3.1.20191231=h1de35cc_1
   - libffi=3.3=hb1e8313_2
@@ -135,7 +136,9 @@ dependencies:
   - libiconv=1.16=h1de35cc_0
   - liblief=0.10.1=h0a44026_0
   - libllvm10=10.0.1=h76017ad_5
+  - libllvm9=9.0.1=h21ff451_1
   - libpng=1.6.37=ha441bb4_0
+  - libpq=12.2=h051b688_0
   - libprotobuf=3.13.0.1=hab81aa3_0
   - libsodium=1.0.18=h1de35cc_0
   - libspatialindex=1.9.3=h0a44026_0
@@ -211,6 +214,7 @@ dependencies:
   - prompt_toolkit=3.0.8=0
   - protobuf=3.13.0.1=py38hb1e8313_1
   - psutil=5.7.2=py38haf1e3a3_0
+  - psycopg2=2.8.5=py38hddc9c9b_0
   - ptyprocess=0.6.0=py38_0
   - py=1.9.0=py_0
   - py-lief=0.10.1=py38haf313ee_0
@@ -218,7 +222,7 @@ dependencies:
   - pycodestyle=2.6.0=py_0
   - pycosat=0.6.3=py38h1de35cc_1
   - pycparser=2.20=py_2
-  - pycurl=7.43.0.6=py38hddc9c9b_0
+  - pycurl=7.43.0.5=py38ha12b0ac_0
   - pydocstyle=5.1.1=py_0
   - pyflakes=2.2.0=py_0
   - pygments=2.7.2=pyhd3eb1b0_0
@@ -250,7 +254,6 @@ dependencies:
   - qtpy=1.9.0=py_0
   - readline=8.0=h1de35cc_0
   - regex=2020.10.15=py38haf1e3a3_0
-  - requests=2.24.0=py_0
   - ripgrep=12.1.1=0
   - rope=0.18.0=py_0
   - rtree=0.9.4=py38_1
@@ -267,6 +270,7 @@ dependencies:
   - singledispatch=3.4.0.3=py_1001
   - sip=4.19.8=py38h0a44026_0
   - six=1.15.0=py38hecd8cb5_0
+  - snappy=1.1.8=hb1e8313_0
   - snowballstemmer=2.0.0=py_0
   - sortedcollections=1.2.1=py_0
   - sortedcontainers=2.2.2=py_0
@@ -286,6 +290,7 @@ dependencies:
   - sqlite=3.33.0=hffcf06c_0
   - statsmodels=0.12.0=py38haf1e3a3_0
   - sympy=1.6.2=py38hecd8cb5_1
+  - tbb=2020.3=h879752b_0
   - tblib=1.7.0=py_0
   - terminado=0.9.1=py38_0
   - testpath=0.4.4=py_0
@@ -337,6 +342,7 @@ dependencies:
     - altair==4.1.0
     - analytics-python==1.2.9
     - appdirs==1.4.4
+    - argcomplete==1.12.2
     - astor==0.8.1
     - astunparse==1.6.3
     - async-timeout==3.0.1
@@ -346,11 +352,15 @@ dependencies:
     - black==20.8b1
     - blinker==1.4
     - cachetools==4.2.0
+    - change-case==0.5.2
+    - chardet==4.0.0
     - crc32c==2.2
+    - datamodel-code-generator==0.8.2
     - dgl==0.5.3
     - dglke==0.1.2
     - distlib==0.3.1
     - dnspython==2.1.0
+    - email-validator==1.1.2
     - eventsourcing==8.2.5
     - fastapi==0.63.0
     - flask-bcrypt==0.7.1
@@ -360,6 +370,7 @@ dependencies:
     - flatbuffers==1.12
     - gast==0.3.3
     - gdown==3.12.2
+    - genson==1.2.2
     - gitdb==4.0.5
     - gitpython==3.1.12
     - google-auth-oauthlib==0.4.2
@@ -369,6 +380,8 @@ dependencies:
     - gtts==2.2.2
     - h11==0.12.0
     - hupper==1.10.2
+    - inflect==4.1.1
+    - iso8601==0.1.12
     - keras-preprocessing==1.1.2
     - markdown==3.3.3
     - markdown2==2.4.0
@@ -376,11 +389,13 @@ dependencies:
     - mypy-extensions==0.4.3
     - netifaces==0.10.9
     - oauthlib==3.1.0
+    - openapi-spec-validator==0.2.9
     - opencv-python==4.5.1.48
     - opt-einsum==3.3.0
     - paramiko==2.7.2
     - pathspec==0.8.1
     - pipenv==2020.11.15
+    - prance==0.20.2
     - pyarrow==2.0.0
     - pycryptodome==3.9.9
     - pydantic==1.7.3
@@ -520,11 +535,14 @@ dependencies:
     - pyobjc-framework-virtualization==7.1
     - pyobjc-framework-vision==7.1
     - pyobjc-framework-webkit==7.1
+    - pysnooper==0.4.2
     - pyttsx==1.1
     - pyttsx3==2.90
     - readerwriterlock==1.0.7
     - redis==3.5.3
+    - requests==2.25.1
     - requests-oauthlib==1.3.0
+    - semver==2.13.0
     - smmap==3.0.4
     - speechrecognition==3.8.1
     - starlette==0.13.6
